--- a/README.Rmd
+++ b/README.Rmd
@@ -624,7 +624,10 @@ The MAPBIOMAS project gathers data reporting the type of land covering each year
 4. time_period: The data availability for each dataset is detailed above
 5. language: you can choose between portuguese ('pt') and english ('eng')
 6. time_id: 'year'
-7. cover_level: Five options: 
+7. cover_level: 
+        The cover levels inform the usage of the refered land. The levels range from the least         to the most specific information about the land.
+        Example: level_0: Anthropic | level_1: Farming | level_2: Agriculture | level_3: Temporary Crops
+        Five options: 
                 # cover_level = 0 has categories such as: Anthropic, Natural, Not Applied 
                 # cover_level = 1 has categories such as: Forest, Non Forest Natural Formation, Farming, Non Vegetated Area, Water, Non Observed
                 # cover_level = 2 has categories such as: Agriculture, Aquaculture, Beach and Dune, Forest Plantation,  Pasture, River, Lake and Ocean                                
